--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,31 @@
         android:theme="@style/Theme.Munchkin"
         tools:targetApi="31">
         <activity
+            android:name=".ResetSuccess"
+            android:exported="false" />
+        <activity
+            android:name=".ResetPW"
+            android:exported="false" />
+        <activity
+            android:name=".FPWOtp"
+            android:exported="false" />
+        <activity
+            android:name=".ForgotPassword"
+            android:exported="false" />
+        <activity
+            android:name=".OTPVerification"
+            android:exported="false" />
+        <activity
+            android:name=".GetPhoneNumber"
+            android:exported="false" />
+        <activity
+            android:name=".SignUp"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SignIn"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
