--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,16 @@
         android:theme="@style/Theme.Munchkin"
         tools:targetApi="31">
         <activity
+            android:name=".OrderHistory"
+            android:exported="false" />
+        <activity
             android:name=".SplashScreen"
-            android:exported="false">
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -80,12 +86,7 @@
         </activity>
         <activity
             android:name=".CheckoutInformationActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -123,9 +124,16 @@
             android:exported="false" />
         <activity
             android:name=".SignIn"
-            android:exported="false">
-
-        </activity>
+            android:exported="false" />
+        <activity
+            android:name=".BookDetail"
+            android:exported="false" />
+        <activity
+            android:name=".BookList"
+            android:exported="false" />
+        <activity
+            android:name=".Account"
+            android:exported="false" />
     </application>
 
 </manifest>
